[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/cell_tree.gd" type="Script" id=1]
[ext_resource path="res://assets/styles/fontStyle.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/img/closed.png" type="Texture" id=3]
[ext_resource path="res://assets/img/plus.png" type="Texture" id=4]
[ext_resource path="res://assets/img/dot.png" type="Texture" id=5]
[ext_resource path="res://assets/styles/textFontStyle.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/styles/menuButtonTheme.tres" type="Theme" id=7]

[node name="VBox" type="VBoxContainer"]
margin_left = 5.0
margin_right = 155.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( -11.2472, 68.7112 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 194.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="expand" type="TextureButton" parent="HBox"]
margin_top = 26.0
margin_right = 11.0
margin_bottom = 37.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cellName" type="Label" parent="HBox"]
margin_left = 14.0
margin_top = 17.0
margin_right = 85.0
margin_bottom = 47.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CÃ©lula 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="HBox"]
margin_left = 88.0
margin_right = 194.0
margin_bottom = 64.0
size_flags_horizontal = 2
custom_constants/margin_left = 65

[node name="HBox" type="HBoxContainer" parent="HBox/Margin"]
margin_left = 65.0
margin_right = 106.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="plus" type="TextureButton" parent="HBox/Margin/HBox"]
margin_top = 26.0
margin_right = 12.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extraOptions" type="MenuButton" parent="HBox/Margin/HBox"]
margin_left = 16.0
margin_right = 41.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 64.0
margin_right = 194.0
margin_bottom = 64.0
custom_constants/separation = 0

[connection signal="pressed" from="HBox/expand" to="." method="_on_expand_pressed"]
[connection signal="pressed" from="HBox/Margin/HBox/plus" to="." method="_on_plus_pressed"]
